updated images path and structure

--- a/index.html
+++ b/index.html
@@ -10,26 +10,28 @@
 <body>
     <div class="gallery">
         <div class="img-container">
-            <img src="./Preview/preview 1.jpg" alt="city veiw " data-original = "full 1.jpg" />
+            <img src="./Preview/preview 1.jpg" alt="city veiw " data-original = "preview 1.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 2.jpg" alt="city veiw " data-original = "full 2.jpg" />
+            <img src="./Preview/preview 2.jpg" alt="city veiw " data-original = "preview 2.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 3.jpg" alt="Hill veiw" data-original = "full 3.jpg" />
+            <img src="./Preview/preview 3.jpg" alt="Hill veiw" data-original = "preview 3.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 4.jpg" alt="Elephant veiw " data-original = "full 4.jpg" />
+            <img src="./Preview/preview 4.jpg" alt="Elephant veiw " data-original = "preview 4.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 5.jpg" alt="car veiw " data-original = "full 5.jpg" />
+            <img src="./Preview/preview 5.jpg" alt="car veiw " data-original = "preview 5.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 6.jpg" alt="waterfall veiw " data-original = "full 6.jpg" />
+            <img src="./Preview/preview 6.jpg" alt="waterfall veiw " data-original = "preview 6.jpg" />
         </div>
     </div>
-
-
+    <div class="modal">
+        <img src="./Full/full 1.jpg" alt="city veiw" class="full-img">
+        <p class="caption">city veiw</p>
+    </div>
     <script src= "./app.js"></script>
 </body>
 </html>
