updated paths nd names

--- a/index.html
+++ b/index.html
@@ -10,26 +10,26 @@
 <body>
     <div class="gallery">
         <div class="img-container">
-            <img src="./Preview/preview 1.jpg" alt="city veiw " data-original = "preview 1.jpg" />
+            <img src="./Preview/city-view-preview.jpg" alt="city veiw " data-original = "city-view-full.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 2.jpg" alt="city veiw " data-original = "preview 2.jpg" />
+            <img src="./Preview/city-night-view-preview.jpg" alt="city night veiw " data-original = "city-night-view-full.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 3.jpg" alt="Hill veiw" data-original = "preview 3.jpg" />
+            <img src="./Preview/hill-view-preview.jpg" alt="Hill veiw" data-original = "hill-view-full.jpg" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 4.jpg" alt="Elephant veiw " data-original = "preview 4.jpg" />
+            <img src="./Preview/waterfall-view-preview.jpg" alt="waterfall veiw " data-original = "waterfall-view-full.jpg" />
+        </div> 
+        <!-- <div class="img-container">
+            <img src="./Preview/city-view-preview.jpg" alt="car veiw " data-original = "" />
         </div>
         <div class="img-container">
-            <img src="./Preview/preview 5.jpg" alt="car veiw " data-original = "preview 5.jpg" />
-        </div>
-        <div class="img-container">
-            <img src="./Preview/preview 6.jpg" alt="waterfall veiw " data-original = "preview 6.jpg" />
-        </div>
+            <img src="./Preview/city-view-preview.jpg" alt="waterfall veiw " data-original = "" />
+        </div>  -->
     </div>
     <div class="modal">
-        <img src="./Full/full 1.jpg" alt="city veiw" class="full-img">
+        <img src="./Full/city-view-full.jpg" alt="city veiw" class="full-img">
         <p class="caption">city veiw</p>
     </div>
     <script src= "./app.js"></script>
